...
                  alignment: Alignment.centerRight,
                  child: TextButton(
                    onPressed: () {
                      // Navigate to forgot password page
                    },
                    child: Text(
                      'Forgot Password?',
                      style: appTheme.typography.bodyH8.copyWith(
                        color: appTheme.colors.primaryRed,
                      ),
                    ),
                  ),
                ),
...
                    ),
                    TextButton(
                      onPressed: () {
                        // Navigate to sign up page
                      },
                      child: Text(
                        'Sign Up',
                        style: appTheme.typography.bodyH8.copyWith(
                          color: appTheme.colors.primaryRed,
                          fontWeight: FontWeight.w600,
                        ),
                      ),
                    ),
...
